# OrbitalShepherd

./: .editorconfig  .env.example  .gitignore  01_mission_rfc.md  02_architecture.md  03_benchmark_spec.md  04_data_contracts.md  05_planner_api.openapi.yaml  Makefile  README.md  dvc.yaml  orbital_shepherd_phase1_codex_plan.md  orbital_shepherd_phase2_codex_plan.md  orbital_shepherd_phase3_codex_plan.md  package.json  phase0_manifest.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.playwright-mcp/: page-2026-04-13T02-07-48-183Z.yml  page-2026-04-13T02-08-24-490Z.yml
apps/web/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.test.tsx  (+7 more)
data/demo/: phase1-defaults.json  phase1-verification.json  phase2-defaults.json  phase2-verification.json
data/scenarios/: sb--osbench-phase1-pack-v1--burst_outbreak--seed-201.json  sb--osbench-phase1-pack-v1--burst_outbreak--seed-202.json  sb--osbench-phase1-pack-v1--burst_outbreak--seed-203.json  sb--osbench-phase1-pack-v1--cloud_trap--seed-301.json  sb--osbench-phase1-pack-v1--cloud_trap--seed-302.json  sb--osbench-phase1-pack-v1--cloud_trap--seed-303.json  sb--osbench-phase1-pack-v1--sparse_frontier--seed-101.json  sb--osbench-phase1-pack-v1--sparse_frontier--seed-102.json  sb--osbench-phase1-pack-v1--sparse_frontier--seed-103.json  sb--osbench-phase1-pack-v1--sparse_frontier--seed-104.json
docs/phase1/: ADR-0001-contract-normalization.md  api.md  benchmark-runner.md  engineering-foundation.md  env-runtime.md  ephemeris-service.md  phase1-completion-report.md  scenario-engine.md  ui.md
docs/phase2/: ADR-0001-phase2-training-contract.md  bc-and-finetune.md  evaluation.md  offline-datasets.md  phase2-completion-report.md  rllib-training.md  strong-baselines.md  training-env.md  training-foundation.md  ui-trained-policy.md
docs/phase3/: ADR-0001-phase3-tactical-scope.md  architecture-overview.md  artifact-graph.md  glossary.md  region-builder.md  routing-engine.md  tactical-scenario-engine.md
examples/: sample_replay.ndjson  sample_scenario.json
infra/compose/: phase3-routing.compose.yaml
schemas/: downlink_window.schema.json  ground_station.schema.json  incident.schema.json  incident_packet.schema.json  observation_opportunity.schema.json  replay_event.schema.json  satellite.schema.json  scenario_bundle.schema.json  target_cell.schema.json
scripts/: _bootstrap.py  build_region_bundle.py  build_scenario_pack.py  build_tactical_scenario_pack.py  compile_orbit_assets.py  fetch_ephemeris.py  phase1_demo.py  phase2_compare_learning_paths.py  phase2_demo.py  phase2_training.py  phase3_routing.py  phase3_tactical_scenarios.py  run_phase1_api.py  run_phase1_benchmark.py  validate_scenario_pack.py  validate_tactical_scenario_pack.py  verify_phase1_stack.py  verify_phase2_stack.py
tests/: __init__.py  conftest.py  test_core_deterministic.py  test_smoke_imports.py  trained_policy_helpers.py
tests/api/: test_phase1_api.py  test_trained_policy_api.py
tests/benchmark/: __init__.py  helpers.py  test_phase1_metrics_and_runner.py  test_phase1_planners.py
tests/contracts/: test_contract_normalization.py  test_phase3_tactical_contracts.py
tests/env_runtime/: test_orbital_env.py
(+220 files in other folders)
